# chatgpt-cli

./: .gitignore  README.md  pyproject.toml
chatgpt/: all_model_list.json  chatgpt_gpt_3_dot_5_turbo.py  chatgpt_text_davinci_003.py  utils.py
chatgpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
